# ghjk

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  _.rtx.toml  action.yml  check.ts  deno.jsonc  flake.nix  ghjk.ts  hack.ts  init.ts  install.sh  install.ts  main.ts  mod.ts  play.ts  plug.ts  port.ts  rust-toolchain.toml  setup.ts  setup_globals.ts  setup_logger.ts  std.ts  unarchive.ts
.cargo/: config.toml
.ghjk/: config.json  lock.json
.github/: actionlint.yaml
.github/workflows/: autoupdate.yml  nightly.yml  pr-title-check.yml  release.yml  tests.yml
cli/: cleanup.ts  deps.ts  hooks.ts  list.ts  mod.ts  outdated.ts  sync.ts  utils.ts
cli/core/: hooks.ts  tools.ts
core/: ambient.ts  asdf.ts  logger.ts  mod.ts  types.ts  utils.ts  validators.ts  worker.ts
docs/: architecture.md  architecture.tldr  available-commands.md  faq.md  installation-vars.md  known-issues.md  manual.md
examples/: deno.jsonc  ghjk.ts  template.ts
examples/cmake/: ghjk.ts
examples/env_vars/: ghjk.ts
examples/envs/: ghjk.ts
examples/kitchen/: ghjk.ts
examples/many_installs/: ghjk.ts
examples/protoc/: ghjk.ts
examples/tasks/: ghjk.ts
files/: MergedEnvs.ts  cookbook.ts  merged_envs.ts  mod.ts  types.ts
files/deno/: bindings.ts  mod.ts  mod2.ts  worker.ts
gh_action/: ghjk.ts  index.js  index.ts  main.js  main.ts  package.json  pnpm-lock.yaml  post.js  post.ts  tsconfig.json
ghjkfiles/: mod.ts
ghjkfiles/deno/: worker.ts
host/: deno.ts  mod.ts  types.ts  worker.ts
host/init/: mod.ts  template.ts
init/: entrypoint.ts  init.ts  mod.ts
init/hooks/: bash.sh  zsh.zsh
install/: ghjk.sh  hook.fish  hook.sh  mod.ts  noninteractive.zsh  utils.ts
install/hooks/: bash.sh  fish.fish  zsh.zsh
jco/: install  list-all
modules/: mod.ts  std.ts  types.ts  utils.ts
modules/envs/: inter.ts  mod.ts  posix.ts  reducer.ts  types.ts
modules/ports/: ambient.ts  asdf.ts  base.ts  cargo-binstall.ts  db.ts  ghrel.ts  inter.ts  mod.ts  pipi.ts  reducers.ts  std.ts  std_runtime.ts  sync.ts  types.ts  utils.ts  worker.ts
modules/ports/types/: platform.ts
modules/tasks/: deno.ts  exec.ts  mod.ts  types.ts
plugs/: act.ts  asdf.ts  awk.ts  cargo-binstall.ts  cargo-insta.ts  curl.ts  earthly.ts  git.ts  jco.ts  mold.ts  node.ts  pnpm.ts  protoc.ts  ruff.ts  rust.ts  tar.ts  unzip.ts  wasm-opt.ts  wasm-tools.ts  wasmedge.ts  whiz.ts
ports/: act.ts  asdf.ts  asdf_git_plugin.ts  asdf_plugin_git.ts  cargo-binstall.ts  cargo-insta.ts  cargobi.ts  cmake.ts  cpy_bs.ts  curl.ts  deno_ghrel.ts  dummy.ts  dup_test.ts  earthly.ts  emscripten.ts  fx_ghrel.ts  git.ts  infisical.ts  jco.ts  jdk_temurin.ts  jq_ghrel.ts  lade_ghrel.port.ts  livekit_cli_ghrel.ts  meta_cli_ghrel.ts  mod.ts  mold.ts  node.ts  npmi.ts  opentofu_ghrel.ts  pipi.ts  pnpm.ts  poetry.ts  protoc.ts  python_bs.ts  ruff.ts  rust.ts  rustup.ts  tar.ts  temporal_cli.ts  terraform.ts  (+8 more)
scripts/: check.ts  dev.ts
setup/: mod.ts
setup/vfs/: entrypoint.ts  fish.fish
src/: deps.ts  hooks.ts  main.ts  prevghjk.ts  sync.ts  utils.ts
src/cli/: sync.ts
src/deno_ports/: ambient.ts  ghrel.ts  mod.ts
src/deno_ports/unar/: deps.ts  mod.ts
src/deno_systems/: bindings.ts  mod.ts  types.ts
src/deno_utils/: deps.ts  logger.ts  mod.ts  setup_logger.ts  worker.ts
src/denort/: Cargo.toml  lib.rs  macros.rs  promises.rs  unsync.rs  worker.rs
src/ghjk/: Cargo.toml  cli.rs  config.rs  deno.rs  ext.rs  host.rs  log.rs  main.rs  systems.rs  utils.rs
src/ghjk/cli/: init.rs  print.rs  reducers.rs  sys.rs
src/ghjk/deno/: 00_runtime.js  runtime.d.ts
src/ghjk/ext/: callbacks.rs
src/ghjk/host/: deno.rs  hashfile.rs
src/ghjk/js/: 00_runtime.js  mock.sfx.ts  runtime.d.ts  runtime.js
src/ghjk/systems/: deno.rs  envs.rs  tasks.rs
src/ghjk/systems/deno/: cli.rs
src/ghjk/systems/envs/: posix.rs  types.rs
src/ghjk/systems/tasks/: bindings.ts  exec.rs  reducers.rs  types.rs
src/ghjk_ts/: bindings.ts  file.ts  hack.ts  mod.ts  std.ts  types.ts
src/ghjk_ts/std/: copyLock.ts  ignore.ts  sedLock.ts
src/hooks/: hook.fish  hook.sh  noninteractive.zsh
src/install/: deps.ts  mod.ts
src/play/: Cargo.toml  main.rs
src/sys_deno/: bindings.ts  mod.ts  std.ts  types.ts
src/sys_deno/envs/: inter.ts  mod.ts  posix.ts  reducer.ts  types.ts
src/sys_deno/ports/: ambient.ts  base.ts  db.ts  deps.ts  ghrel.ts  mod.ts  reducers.ts  std.ts  std_runtime.ts  sync.ts  types.ts  utils.ts  worker.ts
src/sys_deno/ports/types/: platform.ts
src/sys_deno/tasks/: deno.ts  exec.ts  inter.ts  mod.ts  reducers.ts  types.ts
src/xtask/: Cargo.toml  main.rs  utils.rs
std/: copyLock.ts  py.ts  sedLock.ts
tests/: ambient.ts  deps.ts  e2e.ts  envHooks.ts  envs.ts  examples.ts  hashfile.ts  hooks.ts  ports.ts  portsOutdated.ts  portsOutdatedTest.ts  reloadHooks.ts  setup_globals.ts  tasks.ts  test-alpine.Dockerfile  test.Dockerfile  test.Dockerfile.dockerignore  todo.ts  unar.ts  utils.ts
tests/modules/ports/: portsOutdatedTest.ts
tools/: check.ts  dev.ts  install-sys.sh  jco.ts  node.ts  rust.ts
utils/: cli.ts  logger.ts  mod.ts  serialization.ts  unarchive.ts  url.ts  worker.ts
