[workspace]
members = ["src/ghjk", "src/play", "src/xtask", "src/denort"]
resolver = "2"

[workspace.package]
version = "0.3.1-rc.1"
edition = "2021"

[workspace.dependencies]
denort = { path = "src/denort" }
deno = { git = "https://github.com/metatypedev/deno", branch = "v2.2.4-embeddable.2" }
# deno = { path = "../deno/cli" }
# needed to get deno_core::op2 working
# WARN: must track version used by deno
deno_core = "=0.340.0"

educe = "0.6"

color-eyre = "0.6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
  "tracing-log"
] }
tracing-unwrap = "1.0"

once_cell = "1"

# WARN: version must match on clap in `deno`
clap = "=4.5"
clap_complete = "=4.5"

shadow-rs = "0.36.0"


tokio = "1"
