[package]
name = "denort"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
tracing-unwrap.workspace = true

color-eyre.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

deno = { git = "https://github.com/metatypedev/deno", branch = "v2.0.6-embeddable" }
# deno_core = "=0.291.0"
# breaking changes to .18 
# https://github.com/JelteF/derive_more/issues/373
derive_more = "=0.99.17"
