[package]
name = "denort"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
tracing-unwrap.workspace = true

educe.workspace = true

color-eyre.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

deno = { git = "https://github.com/metatypedev/deno", branch = "v2.0.6-embeddable" }

tokio.workspace = true
# deno_core = "=0.291.0"