[package]
name = "ghjk"
description = "Program your development environments."
version.workspace = true
edition.workspace = true

[[bin]]
name = "ghjk"
path = "main.rs"

[dependencies]
denort.workspace = true
deno_core.workspace = true

serde = "1"
serde_json = "1"

ahash = { version = "0.8", features = ["serde"] }
indexmap = { version = "2.6.0", features = ["serde"] }
# serde_repr = { version = "0.1" }

regex = "1.10"

rand = "0.8"
time = { version = "0.3", features = ["serde"] }
nix = { version = "0.29.0", features = ["signal"] }

once_cell = "1.19"
parking_lot = "*"
bitflags = "*"
itertools = "*"

smallvec = { version = "1", features = [
  "serde",
  "const_generics",
  "const_new",
  "union",
] }
smartstring = { version = "1", features = ["serde"] }

educe.workspace = true

thiserror = "1"
tracing-error = "0.2"
tracing-unwrap.workspace = true

color-eyre.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
tracing-futures = "0.2"

async-trait = "0.1.83"
futures-concurrency = "7.6.2"
futures = { version = "=0.3.30", default-features = false, features = ["std", "async-await"] }
tokio = { workspace = true, features = ["full", "parking_lot", "tracing"] }
tokio-stream = "0.1"

dashmap = { version = "5.5", features = ["serde"]}

clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "=4.5.24"
shadow-rs.workspace = true
# TODO: support more config formats
config = { version = "0.14.1", default-features = false, features = ["async", "json5", "json"] }

multihash = "0.19.2"
json-canon = "0.1.3"
data-encoding = "2.6.0"
sha2 = "0.10.8"

pathdiff = "0.2.2"
directories = "5.0.1"
dialoguer = "0.11.0"
console = "0.15.8"
console-subscriber = { version = "0.4.1", optional = true }

[build-dependencies]
shadow-rs.workspace = true
