[package]
name = "play"
version.workspace = true
edition.workspace = true

[[bin]]
name = "play"
path = "main.rs"

[dependencies]

tracing-unwrap.workspace = true

color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full", "parking_lot"] }
data-encoding = "2.6.0"
sha2 = "0.10.8"
futures-concurrency = "7.6.2"
